Add new configurations for OligogenicDataWrapper and ClinVarDataWrapper in finetune_codonbert.yaml and finetune_dnabert2.yaml; include detailed comments for target fields

--- a/configs/finetune_codonbert.yaml
+++ b/configs/finetune_codonbert.yaml
@@ -5,3 +5,48 @@ oligogenic_codon_bert:
   pca_components: 16
   model_initiator_name: codon-bert
   output_size: 2
+
+
+oligogenic_dnabert2:
+  class: OligogenicDataWrapper
+  task: classification
+  Seq_length: 512
+  pca_components: 16
+  model_initiator_name: dnabert2
+  output_size: 2
+
+clinvar_significance_dnabert2:
+  class: ClinVarDataWrapper
+  task: classification
+  target: CLNSIG
+  Seq_length: 512
+  pca_components: 16
+  model_initiator_name: dnabert2
+  output_size: 4
+
+clinvar_significance_codon_bert:
+  class: ClinVarDataWrapper
+  task: classification
+  target: CLNSIG
+  Seq_length: 512
+  pca_components: 16
+  model_initiator_name: codon-bert
+  output_size: 4
+
+clinvar_disease_dnabert2:
+  class: ClinVarDataWrapper
+  task: classification
+  target: CLNDN
+  Seq_length: 512
+  pca_components: 16
+  model_initiator_name: dnabert2
+  output_size: 2
+
+clinvar_disease_codon_bert:
+  class: ClinVarDataWrapper
+  task: classification
+  target: CLNDN
+  Seq_length: 512
+  pca_components: 16
+  model_initiator_name: codon-bert
+  output_size: 2
