--- a/configs/finetune_dnabert2.yaml
+++ b/configs/finetune_dnabert2.yaml
@@ -1,7 +1,7 @@
 clinvar_CLNDN_dnabert2:
   class: ClinVarDataWrapper
   task: classification
-  target: CLNDN
+  target: CLNDN # disease name
   Seq_length: 1024
   pca_components: 16
   disease_subset: True
@@ -30,7 +30,7 @@ geneko-single_dnabert2:
 clinvar_CLNSIG_dnabert2:
   class: ClinVarDataWrapper
   task: classification
-  target: CLNSIG
+  target: CLNSIG  # clinical significance (4 classes). Refer paper for more details
   Seq_length: 1024
   pca_components: 16
   model_initiator_name: dnabert2
