--- a/configs/finetune_codonbert.yaml
+++ b/configs/finetune_codonbert.yaml
@@ -5,7 +5,8 @@ oligogenic_codon_bert:
   pca_components: 16
   model_initiator_name: codon-bert
   output_size: 2
-
+  num_records: 25000
+  all_records: False
 
 oligogenic_dnabert2:
   class: OligogenicDataWrapper
@@ -14,6 +15,8 @@ oligogenic_dnabert2:
   pca_components: 16
   model_initiator_name: dnabert2
   output_size: 2
+  num_records: 25000
+  all_records: False
 
 clinvar_significance_dnabert2:
   class: ClinVarDataWrapper
