Comment out num_records and all_records in finetune_codonbert.yaml for Codon-Bert and DNA-Bert configurations

--- a/configs/finetune_codonbert.yaml
+++ b/configs/finetune_codonbert.yaml
@@ -5,8 +5,8 @@ oligogenic_codon_bert:
   pca_components: 16
   model_initiator_name: codon-bert
   output_size: 2
-  num_records: 15000
-  all_records: False
+  # num_records: 150000
+  # all_records: False
 
 oligogenic_dnabert2:
   class: OligogenicDataWrapper
@@ -15,8 +15,8 @@ oligogenic_dnabert2:
   pca_components: 16
   model_initiator_name: dnabert2
   output_size: 2
-  num_records: 15000
-  all_records: False
+  # num_records: 150000
+  # all_records: False
 
 clinvar_significance_dnabert2:
   class: ClinVarDataWrapper
